# aoc

./: Cargo.toml
2021/: Cargo.toml
2021/src/: lib.rs  main.rs
2021/src/solution/: mod.rs  p01.rs  p05.rs  p11.rs  p13.rs
2021/src/solution/util/: grid.rs
aocio/: Cargo.toml
aocio/src/: in.txt  lib.rs
aocio/tests/: basic.rs  test.rs  tuples.rs
src/: client.rs  lib.rs  main.rs
src/solution/: mod.rs  p02.rs  p03.rs  p04.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p24.rs
src/solution/util/: graph.rs  grid.rs  matrix.rs  mod.rs  point.rs
src/solution/y2019/: intcode.rs  mod.rs  p02.rs  p05.rs  p06.rs  p07.rs  p09.rs  p11.rs  p13.rs  p15.rs  p17.rs  p21.rs
src/solution/y2020/: mod.rs  p01.rs
src/solution/y2021/: mod.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs  p18.rs  p19.rs  p20.rs  p21.rs  p22.rs  p23.rs  p24.rs  p25.rs
