[package]
name = "ac2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5.0"
anyhow = "1.0.51"
reqwest = { version = "0.11.7", features = ["cookies"] }
rpassword = "5.0.1"
scraper = "0.12.0"
serde = "1.0.131"
structopt = "0.3.25"
