[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
actix-rt = "2.5.0"
anyhow = "1.0.51"
itertools = "0.10.3"
num = "0.4.0"
once_cell = "1.8.0"
reqwest = { version = "0.11.7", features = ["cookies"] }
rpassword = "5.0.1"
scraper = "0.12.0"
structopt = "0.3.25"
aocio = { path = "aocio" }

[profile.test]
opt-level = 3
